prep move to github

--- a/like_gun/notes.tex
+++ b/like_gun/notes.tex
@@ -216,7 +216,7 @@ of $f$ are not varied.
     \centering
     \resizebox{\columnwidth}{!}{\includegraphics{D_test.pdf}}  
     \caption{The matrix $D$.  Each trace represents
-      $\frac{\partial c_v[i]}{\partial c_f[j]}$ for a different $j$.}
+      $\frac{\partial c_v[i]}{\partial c_f[j]}$ for a different $i$.}
     \label{fig:D_test}
   \end{figure}
 \item[set\_Be] Map experimental velocities v and times t to the
