More changes to test structure

--- a/like_gun/notes.tex
+++ b/like_gun/notes.tex
@@ -207,10 +207,10 @@ not varied because they are fixed at 0.
   appears in Fig.~\ref{fig:vt_test}.
   \begin{figure}
     \centering
-    \resizebox{\columnwidth}{!}{\includegraphics{vt_test.pdf}}  
+    \resizebox{\columnwidth}{!}{\includegraphics{vt_test.pdf}}
     \caption{Velocity as functions of time.  Traces for the
       \emph{experimental} data, a simulation with the initial EOS and
-      the errro.}
+      the error.}
     \label{fig:vt_test}
   \end{figure}
 \item[set\_D] Use finite differences to calculate dv/df in terms of
@@ -355,7 +355,7 @@ and the iterations approach the \emph{actual} function
 which was used to generate the simulated data.
 \begin{figure}
   \centering
-    \resizebox{\columnwidth}{!}{\includegraphics{fig_d.pdf}}  
+    %\resizebox{\columnwidth}{!}{\includegraphics{fig_d.pdf}}  
     \caption{Illustration of the derivative of the velocity function
       with respect to the pressure function, $\frac{d v}{d p}$.  The
       second and third columns correspond variations of the
@@ -367,7 +367,7 @@ which was used to generate the simulated data.
 \end{figure}
 \begin{figure}
   \centering
-    \resizebox{0.8\columnwidth}{!}{\includegraphics{fig_fve.pdf}}  
+    %\resizebox{0.8\columnwidth}{!}{\includegraphics{fig_fve.pdf}}  
     \caption{Maximum likelihood estimation of $f$.  The \emph{true}
       EOS appears as \emph{actual} in the upper plot, and the
       optimization starts with the \emph{initial} and ends with
